<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.v7.widget.AppCompatImageView
            android:layout_width="match_parent"
            android:layout_height="91dp"
            android:layout_marginTop="50dp"
            android:src="@mipmap/ic_logo" />

        <EditText
            android:id="@+id/edittext_firstname"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:autofillHints=""
            android:background="@drawable/rounded_edittext"
            android:hint="@string/first_name"
            android:inputType="text|textCapSentences"
            android:textAlignment="center"
            android:textSize="23sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edittext_lastname"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:autofillHints=""
            android:background="@drawable/rounded_edittext"
            android:hint="@string/last_name"
            android:inputType="text|textCapSentences"
            android:textAlignment="center"
            android:textSize="23sp"
            android:textStyle="bold"
            tools:targetApi="o" />

        <EditText
            android:id="@+id/edittext_email"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:autofillHints=""
            android:background="@drawable/rounded_edittext"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textAlignment="center"
            android:textSize="23sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edittext_password"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:autofillHints=""
            android:background="@drawable/rounded_edittext"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textAlignment="center"
            android:textSize="23sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button_signup"
            android:layout_width="145dp"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:background="@drawable/rounded_button"
            android:text="@string/sign_up"
            android:textColor="@android:color/background_light"
            android:textSize="23sp" />

        <TextView
            android:id="@+id/textview_errors"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:textAlignment="center"
            android:textColor="@color/colorBlack"
            android:textSize="14sp" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>